# rust-rest-api

./: .env  .secret.key  Cargo.toml
config/: default.toml
firebase-auth-rust/: .gitignore  Cargo.toml
firebase-auth-rust/src/: account.rs  error.rs  lib.rs  models.rs  service.rs
migrations/2020-03-09-134857_create_users/: up.sql
src/: constants.rs  db.rs  error_handler.rs  identity_service.rs  main.rs  middleware.rs  response.rs  schema.rs
src/app/: mod.rs  model.rs
src/db/: lib.rs  mod.rs
src/handlers/: function_handler.rs
src/models/: mod.rs  token.rs
src/users/: mod.rs  model.rs  routes.rs
src/utils/: guard_url.rs  mod.rs  response.rs  token_utils.rs
utils/: Cargo.toml
utils/src/: claims.rs  encryption.rs  jwt.rs  lib.rs  request.rs  utils.rs
utils/src/my_serde/: mod.rs
utils/src/rate_limit/: mod.rs  rate_limiter.rs
utils/src/settings/: defaults.rs  mod.rs  structs.rs
