[package]
name = "notely_rust"
version = "0.1.0"
authors = ["Ola John <ajiboye.olasunkanmi@bcgplatinion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = { version = "2.2.0", default-features = false }
actix-web-httpauth = "0.6.0-beta.2"
actix-files = "0.6.0-beta.6"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
r2d2 = "0.8"
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "0.6", features = ["serde", "v4"] }
anyhow = "1.0.42"
jsonwebtoken = "7.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
lazy_static = "1.4"
log = "0.4"
dotenv = "0.11"
tr = "0.1.6"
note_utils = { path = "utils" }
firebase-auth-rust = { path = "firebase-auth-rust", features = ["async"] }